express/blocks/template-x/template-x.css
/* ... */
.template-x .template.placeholder > div:first-of-type {
    width: 100%;
    height: 95%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.template-x.sm-view .template.placeholder > div:first-of-type {
    height: 60%;
}

.template-x .template.placeholder > div:first-of-type > img,
.template-x .template.placeholder > div:first-of-type > svg {
    width: 44px;
    height: 44px;
}

.template-x.holiday.light-text svg {
    fill: var(--color-white);
}

.template-x.holiday.dark-text svg {
    fill: var(--color-gray-800);
}

.template-x.fullwidth.sm-view .template.placeholder > div:first-of-type > img,
.template-x.fullwidth.sm-view .template.placeholder > div:first-of-type > svg {
    width: 22px;
    height: 22px;
}

.template-x .template.placeholder .template-link::after {
    display: none;
}

.template-x .template.placeholder.wide > div:first-of-type {
    height: 65%;
}

.template-x .template.placeholder.wide > div:first-of-type > img,
.template-x .template.placeholder.wide > div:first-of-type > svg {
    width: 24px;
    height: 24px;
}

.template-x-inner-wrapper.flex-masonry .template {
    opacity: 0;
    transition: opacity .3s;
}

.template-x-inner-wrapper.flex-masonry .template.appear {
    opacity: 1;
}

.template-x  {
    position: relative;
}

.template-x .load-more {
    position: absolute;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;
    bottom: 0;
    width: 100vw;
    left: 50%;
    transform: translateX(-50%);
    height: 240px;
    background: linear-gradient(#ffffff00, #ffffff, #ffffff);
}

.template-x.horizontal .load-more {
    display: none;
}

.template-x .load-more-button {
    width: 88px;
    height: 48px;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    background-color: var(--color-black);
    color: var(--color-white);
    font-size: 36px;
    border-radius: 36px;
    border: none;
    transition: background-color 0.2s;
}

.template-x .load-more-button:hover {
    background-color: var(--color-gray-700);
}

.template-x .load-more-button.disabled {
    pointer-events: none;
    opacity: 0.5;
}

.template-x .load-more-button > .icon-plus-icon {
    height: 22px;
    width: 22px;
}

.template-x .load-more-text {
    margin-top: 8px;
    font-weight: 700;
    font-size: 18px;
}

.template-x.fullwidth.lg-view > .template-x-inner-wrapper > .masonry-col {
    max-width: 335px;
    text-align: center;
}

.template-x.fullwidth.md-view > .template-x-inner-wrapper > .masonry-col {
    max-width: 156px;
    text-align: center;
}

.template-x.fullwidth.sm-view > .template-x-inner-wrapper > .masonry-col {
    max-width: 100px;
    text-align: center;
}

.template-x .toolbar-wrapper {
    padding: 0;
    background: var(--color-gray-100);
    position: sticky;
    z-index: 1;
    top: 0;
}

.template-x .api-templates-toolbar {
    position: relative;
    z-index: 1;
    margin: 16px 0 28px 0;
    padding: 16px;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
    transition: box-shadow 0.2s, margin 0.2s;
    gap: 16px;
}

.template-x .toolbar-wrapper.with-box-shadow {
    box-shadow: 0 4px 8px 2px rgb(102 102 102 / 10%);
}

.template-x .api-templates-toolbar .wrapper-content-search {
    display: flex;
    align-items: center;
    gap: 16px;
    position: relative;
    flex-basis: 100%;
}

.template-x .api-templates-toolbar h2 {
    font-size: 18px;
    line-height: 24px;
    margin-top: 0;
}

.template-x .search-dropdown-container {
    background: #FFFFFF;
    top: calc(100% + 6px);
    border-radius: 12px;
    box-shadow: 0 0 20px #00000029;
    position: absolute;
    width: 100%;
    box-sizing: border-box;
    left: 0;
    z-index: 3;
}

main .template-x .search-dropdown-container .dropdown-title {
    margin: 0;
    font-size: 14px;
    color: var(--color-gray-500);
}

main .template-x .search-dropdown-container .trends-container,
main .template-x .search-dropdown-container .suggestions-container {
    padding: 20px 28px 0;
    text-align: left;
}

main .template-x .search-dropdown-container .trends-container .from-scratch-link {
    display: flex;
    align-items: center;
    gap: 8px;
    margin-bottom: 16px;
}

main .template-x .search-dropdown-container .trends-container ul {
    padding-left: 0;
    list-style: none;
    max-height: 216px;
    overflow: auto;
}

main .template-x .search-dropdown-container .suggestions-container ul {
    padding-left: 0;
    list-style: none;
    max-height: 216px;
    overflow: auto;
    margin: 0 0 16px -8px;
}

main .template-x .search-dropdown-container .trends-container .trends-wrapper li,
main .template-x .search-dropdown-container .suggestions-container li {
    margin-bottom: 16px;
}

main .template-x .search-dropdown-container .suggestions-container li {
    cursor: pointer;
    margin: 0 8px 0 0;
    padding: 8px;
}

main .template-x .search-dropdown-container .suggestions-container li:hover,
main .template-x .search-dropdown-container .suggestions-container li:focus-visible {
    background: var(--color-gray-200);
    outline: none;
    border-radius: 8px;
}

main .template-x .search-dropdown-container .trends-container .trends-wrapper li a {
    color: var(--color-black);
}

main .template-x .search-dropdown-container .suggestions-container {
    min-width: 300px;
}

main .template-x .search-dropdown-container .free-plans-container .free-plan-widget {
    width: 100%;
    border-radius: 0 0 12px 12px;
    flex-direction: row;
    align-items: center;
    gap: 10px;
    margin: 0;
    justify-content: center;
}

main .template-x .search-bar-wrapper {
    position: absolute;
    left: 0;
    width: 100%;
    max-width: 560px;
    margin: 0;
    height: max-content;
    transition: max-width 0.5s;
}
/* ... */

